--- a/front-end/src/css/App.css
+++ b/front-end/src/css/App.css
@@ -21,16 +21,14 @@ table {
  text-align: center;
 }
 .Modal {
-   position: relative;
-   top: 250px;
-   left: 400px;
-   right: 20px;
-   bottom: 20px;
-   background-color: #F5F5F5;
-   width:500px;
-   border: 1px solid #000;
-   border-radius: 4px;
-   padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) !important;
+  background-color: #F5F5F5;
+  width:500px;
+  border: 1px solid #000;
+  border-radius: 4px;
 }
 .Overlay {
    position: fixed;
